--- a/css/style.css
+++ b/css/style.css
@@ -407,6 +407,13 @@ min-width:140px;
 display:block;
 }
 
+.grow:hover {
+-webkit-transform: scale(1.3);
+-ms-transform: scale(1.3);
+transform: scale(1.3);
+}
+
+
 /*SEUDO CLASES*/
 p {
 	font-size: 12px;
