--- a/css/style.css
+++ b/css/style.css
@@ -407,16 +407,35 @@ min-width:140px;
 display:block;
 }
 
-.grow:hover {
--webkit-transform: scale(1.3);
--ms-transform: scale(1.3);
-transform: scale(1.3);
+.shrink:hover
+{
+-webkit-transform: scale(0.8);
+-ms-transform: scale(0.8);
+transform: scale(0.8);
+
+}
+
+#idCrucigramaImg
+{
+	width: 310px;
+	height: 220px;
+	
+}
+
+#idCrucigrama
+{
+	font-family: Arial, Helvetica, sans-serif;
+	color: #006680;
+	margin-left: 10px;
+	font-size: 20px;
+	text-align: left;
+	border-top: #006680;
 }
 
 
 /*SEUDO CLASES*/
 p {
-	font-size: 12px;
+	font-size: 14px;
 	font-weight: normal;
 	color: #333;
 }
